# kuu

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  mnist.cpp
kuu/include/: config.hpp  dataloader.hpp  exarray.hpp  function.hpp  functions.hpp  graph.hpp  initializer.hpp  layout.hpp  math.hpp  module.hpp  modules.hpp  optimizer.hpp  optimizers.hpp  tensor.hpp
kuu/include/datasets/: data_common.hpp  mnist.hpp
kuu/include/functions/: batchnorm.hpp  convolution.hpp  error.hpp  linear.hpp  loss.hpp  relu.hpp  sigmoid.hpp  softmax_cross_entropy.hpp
kuu/include/mixin/: non_copyable.hpp  non_movable.hpp
kuu/include/modules/: batchnorm.hpp  convolution.hpp  linear.hpp
kuu/include/optimizers/: sgd.hpp
kuu/include/util/: converter.hpp  io.hpp  util.hpp
kuu/src/: CMakeLists.txt  graph.cpp
test/: CMakeLists.txt  test_common.hpp  test_function.cpp  test_optimizer.cpp  test_tensor.cpp
